--- a/pom.xml
+++ b/pom.xml
@@ -241,7 +241,7 @@
 					<buckets>
 						<property>
 							<name>srini-vehicle-rental/presentation/${project.version}</name>
-							<value>**/target/*.war;public-read</value>
+							<value>**/target/*.war;private</value>
 						</property>
 					</buckets>
 				</configuration>
